--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,10 @@
 {
-  "name": "RubMax Services",
-  "short_name": "RubMax",
-  "start_url": "/RubMaxAppTesNatifications/index.html",
+  "name": "RubMax Servicos App",
+  "short_name": "RubMaxApp",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#d32f2f",
-  "orientation": "portrait",
-  "scope": "/RubMaxAppTesNatifications/",
-  "description": "Application de services RubMax avec notifications et PWA",
+  "theme_color": "#ffffff",
   "icons": [
     {
       "src": "icon-192.png",
@@ -15,15 +12,6 @@
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
-
-
-
       "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
